--- a/part2/notes-app/package.json
+++ b/part2/notes-app/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "server": "json-server --watch db.json --port 3001",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:ui": "rm -rf build && rm -rf ../../part3/notes-server/dist && npm run build && cp -r dist ../../part3/notes-server"
   },
   "dependencies": {
     "axios": "^1.7.9",
