--- a/part3/notes-server/package.json
+++ b/part3/notes-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js",
     "prod": "node index.js",
     "lint": "eslint ."
@@ -17,10 +17,12 @@
     "@stylistic/eslint-plugin-js": "^3.0.1",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
   }
