--- a/part3/notes-server/package.json
+++ b/part3/notes-server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
     "dev": "nodemon index.js",
     "prod": "node index.js",
+    "test": "node --test",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -18,12 +18,16 @@
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
