--- a/part3/notes-server/package.json
+++ b/part3/notes-server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "prod": "node index.js",
-    "test": "node --test",
+    "dev": "cross-env NODE_ENV=dev nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@stylistic/eslint-plugin-js": "^3.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
