--- a/part2/notes-app/package.json
+++ b/part2/notes-app/package.json
@@ -27,11 +27,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.13.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "globals": "^15.11.0",
     "jsdom": "^26.0.0",
     "json-server": "^1.0.0-beta.3",
