--- a/part3/notes-server/package.json
+++ b/part3/notes-server/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev nodemon index.js",
-    "start": "cross-env NODE_ENV=production node index.js",
-    "test": "cross-env NODE_ENV=test node --test",
+    "start": "cross-env NODE_ENV=production nodemon index.js",
+    "start:test": "cross-env NODE_ENV=test nodemon index.js",
+    "test": "cross-env NODE_ENV=test nodemon --test",
     "lint": "eslint ."
   },
   "keywords": [],
